fix: Skin: file status icon alignment in menu's was way off
(integrated from master branch change ef6201f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/bindings/widgets.p.css
+++ b/src/chrome/komodo/skin/bindings/widgets.p.css
@@ -277,10 +277,29 @@ menuitem.menuitem-file-status {
   -moz-binding: url("chrome://komodo/content/bindings/widgets.xml#menuitem-file-status");
 }
 .menu-file-status-image-box {
-  padding-left: 2px;
   /* Ensure these is enough room to display all icons evenly - keeps the
      list of menuitems a uniform width. */
-  min-width: 26px;
+  min-width: 34px;
+  width: auto;
+}
+
+.menu-file-status-image-box .native_file_image
+{
+  margin: 0 4px;
+}
+
+.menu-file-status-image-box .file-readonly-icon[file_readonly="readonly"]
+{
+  -moz-image-region: inherit;
+  width: 16px;
+  margin: 0 -8px 0 -8px;
+}
+
+.menu-file-status-image-box .file-status-icon:not([file_scc_status]):not([file_status])
+{
+  display: inherit !important;
+  visibility: hidden;
+  width: 12px;
 }
 
 /* View overlay */
