--- a/src/chrome/komodo/skin/plat/gnome/menus.less
+++ b/src/chrome/komodo/skin/plat/gnome/menus.less
@@ -5,9 +5,7 @@ menubar {
     min-height: 1.9em;
 }
 
-/**
- * File Status within menu items.
- */
 .menu-file-status-image-box {
-  padding-left: 4px;
+  margin-right: 2px;
+  margin-left: 12px; /* Preserve space for checkbox */
 }
