--- a/src/chrome/komodo/skin/plat/mac/menus.less
+++ b/src/chrome/komodo/skin/plat/mac/menus.less
@@ -4,10 +4,7 @@
  * File Status within menu items.
  */
 .menu-file-status-image-box {
-    padding-left: 0; /* remove 2px padding set in widgets.css */
-    /* Ensure these is enough room to display all icons evenly - keeps the
-       list of menuitems a uniform width (16px for image, 4px for padding). */
-    min-width: 20px;
+    margin-left: -12px;
 }
 
 /* Fix menu alignment when icons are visible */
